--- a/src/style.css
+++ b/src/style.css
@@ -13,9 +13,15 @@
 }
 
 html {
+    font-family: "Roboto", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 16px;
+
+
     background-color: var(--color-highlight);
-    background: url("../public/background.png");
-    
+    background: url("assets/images/lands-bg.webp");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -54,13 +60,10 @@ section {
     display: flex;
     flex-direction: row;
     gap: 10px;
-}
-
-.title h3 {
     text-transform: capitalize;
 }
 
-.container {
+.resource-wrapper {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -68,10 +71,9 @@ section {
 }
 
 .card {
-    font-size: 13px;
     background: var(--color-primary);
     border-radius: 12px;
-    padding: 16px 18px;
+    padding: 5px 18px;
     min-width: 120px;
     color: var(--color-text);
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25) inset;
@@ -85,10 +87,14 @@ section {
 
 .card-body p:first-child {
     margin: 8px 0 4px;
-    font-size: 28px;
+    font-size: 1.5rem;
     font-weight: 600;
     text-align: center;
     color: var(--color-title);
+}
+
+.card-body p:last-child {
+    font-size: .8rem;
 }
 
 
@@ -105,17 +111,15 @@ section {
 .status-summary {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    gap: 5px;
-    font-size: 1rem;
+    justify-content: space-evenly;
+
+
 }
 
 .status-summary p {
     width: 180px;
     text-align: center;
-    padding: 20px 0;
     border-radius: 5px;
-    margin: 0 7px;
     transition: background-color 0.3s ease-in-out;
 }
 
@@ -160,6 +164,7 @@ section {
     justify-content: space-between;
     align-items: center;
 }
+
 .camera-display img {
     width: 100%;
     height: auto;
@@ -241,9 +246,18 @@ section {
 }
 
 @media (max-width: 760px) {
-    header{
+    html {
+        background: url("assets/images/potr-bg.webp");
+        background-position: top;
+        background-repeat: no-repeat;
+        background-size: cover;
+        font-size: 12px;
+    }
+
+    header {
         margin: 0;
     }
+
     .dashboard {
         flex-direction: column;
         padding: 0 20px;
@@ -253,7 +267,35 @@ section {
         margin: 10px 0;
     }
 
-    .container {
+    .resource-wrapper {
         flex-direction: row;
     }
+    .status-summary p {
+        width: 120px;
+    }
+}
+
+@media (max-width: 460px) {
+    html {
+        font-size: 8px;
+    }
+
+    .card {
+        border-radius: 5px;
+        padding: 2px 3px;
+        min-width: 60px;
+    }
+
+    .card-body p:first-child {
+        margin: 4px 0 2px;
+        font-size: 1.5rem;
+    }
+
+    .status-summary p {
+        width: 80px;
+    }
+    .tables p{
+        font-size: .7rem;
+    }
+
 }
