--- a/src/style.css
+++ b/src/style.css
@@ -211,10 +211,19 @@ section {
 .clean {
     color: #08CB00;
 }
-
+.close{
+    width: 100%;
+    color: var(--color-highlight);
+    height: 100%;
+    font-size: 3rem;
+    font-weight: 500;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 .loader-wrapper {
-    /* background-color: #00000085; */
-    /* position: absolute; */
     display: flex;
     align-items: center;
     justify-content: center;
